[gd_scene load_steps=9 format=3 uid="uid://b88y4q5kr6f5a"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_7yttv"]
[ext_resource type="Texture2D" uid="uid://s8mxgom8nhye" path="res://Art/monkey.png" id="2_lmg5a"]
[ext_resource type="Script" path="res://Scripts/water_time.gd" id="3_jrc64"]
[ext_resource type="PackedScene" uid="uid://bsc6m0fkg1p00" path="res://Scenes/water_detection_2d.tscn" id="4_m8o00"]

[sub_resource type="Animation" id="Animation_r882w"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7, 9, 11, 13]
}

[sub_resource type="Animation" id="Animation_eo7jw"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6, 8, 10, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wil3s"]
_data = {
"idle": SubResource("Animation_r882w"),
"walk": SubResource("Animation_eo7jw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bde8m"]
radius = 13.0
height = 44.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 9
script = ExtResource("1_7yttv")

[node name="GFX" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_lmg5a")
hframes = 14
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GFX"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wil3s")
}

[node name="water_time" type="Timer" parent="."]
script = ExtResource("3_jrc64")
max_swim_time = 20

[node name="WaterDetection2D" parent="." instance=ExtResource("4_m8o00")]
position = Vector2(-1.19209e-07, -8)
scale = Vector2(0.969, 1)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1, 14)

[node name="Jump_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Coyote_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="walk_collision" type="CollisionShape2D" parent="."]
position = Vector2(4, 22)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bde8m")

[connection signal="water_state_changed" from="WaterDetection2D" to="." method="_on_water_detection_2d_water_state_changed"]
[connection signal="water_state_changed" from="WaterDetection2D" to="water_time" method="_on_water_detection_2d_water_state_changed"]
